# python-zwo-efw-filter-wheel

./: .gitattributes  .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
zwo_efw/: __init__.py  bindings.py  utilities.py  wrapper.py
zwo_efw/efw_sdk/EFW_SDK/EFW_Windows_SDK_V1.7/EFW SDK/: change_EFWSDK.txt
zwo_efw/efw_sdk/EFW_SDK/EFW_linux_mac_SDK_V1.7/include/: EFW_filter.h
zwo_efw/scripts/: continually_change_slot_position.py  debug.py  efw_script.py  example.py  wrapper_script.py
